# xd_allocator

./: .gitignore  CMakeLists.txt  README.md  allocc.h  testAllocator.cpp  testGetProcessMemoryInfo.cpp  testMemoryAllocator.cpp  testSTLsample.cpp
src/: Loki_allocator.h  main.cpp  new_allocator.h  pool_allocator.h  testMyAlloc.cpp
